--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "vscode": "^1.10.0"
   },
   "categories": [
-    "Debugger"
+    "Debuggers"
   ],
   "activationEvents": [
     "onCommand:extension.reduxDevtools"
