--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-redux-devtools",
-  "displayName": "vscode-redux-devtools",
+  "displayName": "Redux DevTools",
   "description": "vscode redux devtools wrapper",
   "version": "0.0.1",
   "publisher": "jingkaizhao",
