--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Redux DevTools",
     "description": "vscode redux devtools wrapper",
     "icon": "logo/128x128.png",
-    "version": "0.0.8",
+    "version": "0.0.9",
     "publisher": "jingkaizhao",
     "author": {
         "name": "Jingkai Zhao",
@@ -19,7 +19,7 @@
         "url": "https://github.com/jkzing/vscode-redux-devtools/issues"
     },
     "galleryBanner": {
-        "color": "#CCDEF2",
+        "color": "#35364E",
         "theme": "dark"
     },
     "engines": {
