--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "theme": "dark"
   },
   "engines": {
-    "vscode": "^1.10.0"
-  },
+		"vscode": "^1.32.0"
+	},
   "categories": [
     "Debuggers"
   ],
@@ -57,17 +57,19 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "tsc -p ./",
-    "compile": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "node ./node_modules/vscode/bin/test"
+    "vscode:prepublish": "yarn run compile",
+		"compile": "tsc -p ./",
+		"watch": "tsc -watch -p ./",
+		"postinstall": "node ./node_modules/vscode/bin/install",
+		"test": "yarn run compile && node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
-    "typescript": "^2.0.3",
-    "vscode": "^1.0.0",
+    "typescript": "^3.3.1",
+		"vscode": "^1.1.28",
+		"tslint": "^5.12.1",
     "mocha": "^2.3.3",
-    "@types/node": "^6.0.40",
-    "@types/mocha": "^2.2.32"
+		"@types/node": "^10.12.21",
+		"@types/mocha": "^2.2.42"
   },
   "dependencies": {}
 }
