refactor: use vscode webview API and redux-devtools-core

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "commands": [
       {
         "command": "extension.openReduxDevtools",
-        "title": "Redux Devtools: Open on the Side"
+        "title": "Redux Devtools: Open Devtool to the Side"
       }
     ],
     "configuration": {
