fix: make settings actually work, close #5
This is fixed in jkzing/redux-devtools#vscode, just did update the
external scritp file.
In the meantime, the old Settings class is refactored out to be more concise

--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
       "properties": {
         "reduxdev.hostname": {
           "type": "string",
-          "default": "127.0.0.1",
+          "default": "localhsot",
           "description": "The hostname your remotedev server started on."
         },
-        "reduxdev.socketPort": {
+        "reduxdev.port": {
           "type": "number",
-          "default": 1024,
+          "default": 8000,
           "description": "The socket port for Redux Devtools to listen."
         }
       }
